fixed content spacing with trimmed heading

--- a/src/app/components/list.component.css
+++ b/src/app/components/list.component.css
@@ -216,3 +216,7 @@ section.listing a::after {
 .rlg {
   background: repeating-linear-gradient(to bottom, blueviolet, lightgray 20%);
 }
+
+.listing-heading-bb{
+  width: min-content !important;
+}
